fix : 스터디용 파일경로추가가

--- a/welcome.html
+++ b/welcome.html
@@ -53,6 +53,9 @@
         <div class="field">
           <input autocomplete="off" id="name" placeholder="Repository Name" type="text" />
         </div>
+        <div class="field">
+          <input autocomplete="off" id="directory" placeholder="Directory Path (optional, e.g., submissions/my-dir)" type="text" />
+        </div>
       </div>
     </div>
 
